[package]
name = "hypothesis-rs"
version = "0.11.0"
authors = ["Ninjani", "Gyara"]
edition = "2021"
description = "a Fork of hypothesis and fix some problem."
repository = "https://github.com/laxect/rust-hypothesis"
readme = "README.md"
license = "MIT"
keywords = ["hypothesis", "annotation", "api"]
categories = ["api-bindings"]

[dependencies]
# API calls
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.21"
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
derive_builder = "0.11.2"
url = "2.2.2"
time = { version = "0.3.9", features = ["serde-well-known"] }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
dotenv = "0.15.0"
